...
        app:layout_constraintBottom_toTopOf="@+id/deleteButtonForMatrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detButtonForMatrix"
        app:layout_constraintTop_toBottomOf="@+id/matrixViewTwo" />

    <Button
        android:id="@+id/minusButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="12dp"
        android:background="#000000"
        android:text="@string/minusButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/plusButtonForMatrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/threeButtonForMatrix" />

    <Button
        android:id="@+id/plusButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="12dp"
        android:background="#000000"
        android:text="@string/plusButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/enterButtonForMatrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/negateButtonForMatrix" />

    <Button
        android:id="@+id/enterButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="51dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plusButtonForMatrix"
        app:layout_constraintStart_toEndOf="@+id/decimalButtonForMatrix"
        app:layout_constraintTop_toBottomOf="@+id/threeButtonForMatrix" />

    <Button
        android:id="@+id/zeroButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="67dp"
        android:background="#000000"
        android:text="@string/zeroButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decimalButtonForMatrix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneButtonForMatrix" />

    <Button
        android:id="@+id/decimalButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
...
        android:text="@string/decimalButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/negateButtonForMatrix"
        app:layout_constraintStart_toEndOf="@+id/zeroButtonForMatrix"
        app:layout_constraintTop_toBottomOf="@+id/twoButtonForMatrix" />

    <Button
        android:id="@+id/twoButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
...
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/decimalButtonForMatrix"
        app:layout_constraintEnd_toStartOf="@+id/threeButtonForMatrix"
        app:layout_constraintStart_toEndOf="@+id/oneButtonForMatrix"
        app:layout_constraintTop_toBottomOf="@+id/fiveButtonForMatrix" />

    <Button
        android:id="@+id/threeButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
...
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/negateButtonForMatrix"
        app:layout_constraintEnd_toStartOf="@+id/minusButtonForMatrix"
        app:layout_constraintStart_toEndOf="@+id/twoButtonForMatrix"
        app:layout_constraintTop_toBottomOf="@+id/sixButtonForMatrix" />

    <Button
        android:id="@+id/sixButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
...
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/threeButtonForMatrix"
        app:layout_constraintEnd_toStartOf="@+id/plusButtonForMatrix"
        app:layout_constraintStart_toEndOf="@+id/fiveButtonForMatrix"
        app:layout_constraintTop_toBottomOf="@+id/nineButtonForMatrix" />

    <Button
        android:id="@+id/fiveButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
...
        android:text="@string/fiveButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/twoButtonForMatrix"
        app:layout_constraintEnd_toStartOf="@+id/sixButtonForMatrix"
        app:layout_constraintStart_toEndOf="@+id/fourButtonForMatrix"
        app:layout_constraintTop_toBottomOf="@+id/eightButtonForMatrix" />

    <Button
        android:id="@+id/fourButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
...
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/oneButtonForMatrix"
        app:layout_constraintEnd_toStartOf="@+id/fiveButtonForMatrix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sevenButtonForMatrix" />

    <Button
        android:id="@+id/oneButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="18dp"
...
        android:layout_marginStart="18dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="10dp"
        android:text="@string/inputRow"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/inputValueForMatrix"
        app:layout_constraintEnd_toStartOf="@+id/MatrixCreated"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sevenButtonForMatrix"
...
        android:text="@string/Determinant"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nineButtonForMatrix"
        app:layout_constraintEnd_toStartOf="@+id/clearButtonForMatrix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matrixViewOne" />

    <Button
        android:id="@+id/multiplyButtonForMatrix"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="51dp"
...
